--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -9,7 +9,7 @@ rules:
 - apiGroups:
   - addons.managed.openshift.io
   resources:
-  - addontemplates
+  - AddonMetadatas
   verbs:
   - create
   - delete
@@ -21,13 +21,13 @@ rules:
 - apiGroups:
   - addons.managed.openshift.io
   resources:
-  - addontemplates/finalizers
+  - AddonMetadatas/finalizers
   verbs:
   - update
 - apiGroups:
   - addons.managed.openshift.io
   resources:
-  - addontemplates/status
+  - AddonMetadatas/status
   verbs:
   - get
   - patch
