--- a/config/samples/addons_v1alpha1_addonmetadata.yaml
+++ b/config/samples/addons_v1alpha1_addonmetadata.yaml
@@ -1,7 +1,7 @@
 apiVersion: addons.managed.openshift.io/v1alpha1
-kind: AddonTemplate
+kind: AddonMetadata
 metadata:
-  name: addontemplate-sample
+  name: reference-addon
 spec:
   # Add fields here
   foo: bar
