--- a/config/crd/bases/addons.managed.openshift.io_addonmetadata.yaml
+++ b/config/crd/bases/addons.managed.openshift.io_addonmetadata.yaml
@@ -19,7 +19,7 @@ spec:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: AddonMetadata is the Schema for the AddonMetadatas API
+        description: AddonMetadata is the Schema for the AddonMetadata API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
