--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,34 @@
+# Supported hooks: https://pre-commit.com/hooks.html
+#
+# Install hooks:
+#   $ pre-commit install
+# Update hooks:
+#   $ pre-commit autoupdate
+---
 exclude: |
   (?x)(
     (^vendor/)|
     (.deepcopy.go$)
   )
 repos:
+  # vendor
+  - repo: local
+    hooks:
+      - id: govendor
+        name: govendor
+        language: system
+        entry: make vendor
+        pass_filenames: false
+
+  # vet + fmt + golangci-lint + goimports
+  - repo: local
+    hooks:
+      - id: check
+        name: check
+        language: system
+        entry: make check
+        pass_filenames: false
+
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.0.1
     hooks:
@@ -18,27 +43,3 @@ repos:
         args:
           - --autofix
       - id: trailing-whitespace
-
-  - repo: git://github.com/dnephin/pre-commit-golang
-    rev: v0.4.0
-    hooks:
-      - id: go-fmt
-      - id: go-vet
-      - id: go-mod-tidy
-        pass_filenames: false
-        always_run: true
-
-  - repo: local
-    hooks:
-      - id: goimports
-        name: goimports
-        entry: hack/ensure-and-run-goimports.sh
-        language: system
-        types: [go]
-
-      - id: golangci-lint
-        name: golangci-lint
-        entry: hack/ensure-and-run-golangci-lint.sh
-        language: script
-        pass_filenames: false
-        types: [go]
