--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Custom paths
 .cache
 .envrc
-
+vendor/
 
 # --- Kubebuilder generated .gitignore ---
 # Binaries for programs and plugins
@@ -19,12 +19,9 @@ testbin/*
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Kubernetes Generated files - skip generated files, except for vendored files
-
-!vendor/**/zz_generated.*
-
 # editor and IDE paraphernalia
 .idea
 *.swp
 *.swo
 *~
+.vscode
