--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,6 +1,7 @@
 ---
 # GoReleaser docs: https://goreleaser.com/intro/
 # This is used to build the mtcli binary upon pushing a tag.
+# When CGO_ENABLED=1 we can't cross compile, only targeting Linux.
 # Tag needs to respect Semver: https://semver.org/
 # Validate config with: $ goreleaser check
 project_name: mtcli
@@ -10,12 +11,10 @@ before:
     - make check
 builds:
   - env:
-      - CGO_ENABLED=0
+      - CGO_ENABLED=1
       - GO111MODULE=on
     goos:
       - linux
-      - windows
-      - darwin
     main: ./cmd/mtcli
     ldflags:
       - -s -w
@@ -25,9 +24,7 @@ builds:
       - -X 'github.com/mt-sre/addon-metadata-operator/internal/cmd.builtBy=goreleaser'
 archives:
   - replacements:
-      darwin: Darwin
       linux: Linux
-      windows: Windows
       386: i386
       amd64: x86_64
 checksum:
