Run goreleaser inside a container for gcc bindings.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -15,6 +15,8 @@ builds:
       - GO111MODULE=on
     goos:
       - linux
+    goarch:
+      - amd64
     main: ./cmd/mtcli
     ldflags:
       - -s -w
