--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -7,8 +7,8 @@ WORKDIR /build
 RUN echo "noroot:x:10001:10001:noroot:/:/sbin/nologin" | tee -a /etc/passwd
 
 # Cache optimization
-COPY go.mod go.sum ./
-RUN go mod download
+COPY go.mod go.sum Makefile ./
+RUN go mod download && make vendor
 
 COPY . ./
 RUN make build
