--- a/internal/testdata/addons-imageset/reference-addon/addonimagesets/stage/reference-addon.v0.0.1.yaml
+++ b/internal/testdata/addons-imageset/reference-addon/addonimagesets/stage/reference-addon.v0.0.1.yaml
@@ -4,3 +4,7 @@ relatedImages: []
 addOnParameters: []
 addOnRequirements: []
 subOperators: []
+subscriptionConfig:
+  env:
+    - name: IN
+      value: imageset_file
