Extractor interface with implementation. Works for both sql-based and file-based catalog.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -12,6 +12,8 @@ builds:
   - env:
       - CGO_ENABLED=1
       - GO111MODULE=on
+      # required by opm to extract sql-based catalog
+      - CGO_CFLAGS=-DSQLITE_ENABLE_JSON1
     goos:
       - linux
     goarch:
