Add validation_err_msg to AddOnParameters schema.

--- a/config/crd/bases/addons.managed.openshift.io_addonmetadata.yaml
+++ b/config/crd/bases/addons.managed.openshift.io_addonmetadata.yaml
@@ -95,6 +95,8 @@ spec:
                       type: boolean
                     validation:
                       type: string
+                    validation_err_msg:
+                      type: string
                     value_type:
                       type: string
                   required:
